--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 .btn.bg-garnet-500 {
-	@apply hover:bg-garnet-400;
+	@apply hover:bg-garnet-400 disabled:bg-gray-300;
+}
+
+.tour-backdrop {
+	z-index: 998 !important;
 }
